<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     WE WILL MAKE EACH PAGE WHEN IT HAS BABY LESSON AND TIME LINE LIKE 1-2 WEEK.-->

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="638dp" >


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/l28"
            android:id="@+id/l28"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="25sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l28b"
            android:text="@string/l28b"
            android:textSize="25sp"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/l28"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l28c"
            android:text="@string/l28c"
            android:textSize="25sp"
            android:layout_below="@+id/l28b"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l28d"
            android:text="@string/l28d"
            android:textSize="25sp"
            android:layout_below="@+id/l28c"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l28e"
            android:text="@string/l28e"
            android:textSize="25sp"
            android:layout_below="@+id/l28d"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/l28f"
            android:text="@string/l28f"
            android:textSize="25sp"
            android:layout_below="@+id/l28e"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />






        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/nextl28"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="82dp"
            android:layout_marginEnd="82dp"
            android:layout_below="@+id/l28f"/>


        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/backl28"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/nextl28"
            android:layout_toStartOf="@+id/nextl28" />




    </RelativeLayout>


</ScrollView>