<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     WE WILL MAKE EACH PAGE WHEN IT HAS BABY LESSON AND TIME LINE LIKE 1-2 WEEK.-->

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="638dp" >


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/lesson1"
            android:id="@+id/lesson1"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="25sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t15"
            android:text="@string/t15"
            android:textSize="25sp"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/lesson1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t15b"
            android:text="@string/t15b"
            android:textSize="25sp"
            android:layout_below="@+id/t15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t15c"
            android:text="@string/t15c"
            android:textSize="25sp"
            android:layout_below="@+id/t15b"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t15d"
            android:text="@string/t15d"
            android:textSize="25sp"
            android:layout_below="@+id/t15c"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp" />



        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/nextl15"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/lesson1"
            android:layout_alignEnd="@+id/lesson1"
            android:layout_below="@+id/t15d"/>


        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:id="@+id/backl15"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/nextl15"
            android:layout_toStartOf="@+id/nextl15"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />




    </RelativeLayout>


</ScrollView>